--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
 .hero-header {
     margin-top: -100px;
     padding-top: 150px;
-    background: url(../img/hero-bg.jpg) top center no-repeat;
+    background: url(../img/wopaoo/based.png) top center no-repeat;
     background-size: cover;
 }
 
@@ -143,7 +143,7 @@
     right: 0;
     width: calc(50% + 45px);
     height: 100%;
-    background: var(--bs-primary);
+    background: #1b522d;
     z-index: -1;
 }
 
@@ -461,4 +461,44 @@
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+
+.hero-header h1,
+.hero-header h5 {
+    color: white !important;
+}
+
+.hero-header h1 span {
+    color: white !important;
+}
+
+.navbar-brand h1 {
+    color: white !important; /* ubah ke warna yang kamu mau */
+}
+
+.logo {
+    height: 50px; /* sesuaikan dengan tinggi navbar kamu */
+    width: auto;
+}
+
+.navbar-brand h1 {
+    color: white !important; /* warna teks Politeknik AKA Bogor */
+    font-size: 28px; /* bisa disesuaikan */
+    font-weight: 700;
+}
+
+/* Navbar default (saat di atas) */
+.navbar {
+    background-color: transparent;
+    transition: background-color 0.5s ease, box-shadow 0.5s ease;
+}
+
+/* Saat discroll – class .navbar-scrolled ditambahkan lewat JS */
+.navbar.navbar-scrolled {
+    background-color: #ffffff !important;
+}
+
+/* Warna teks berubah saat discroll */
+.navbar.navbar-scrolled .navbar-brand h1 {
+    color: #CA011B !important; /* misalnya merah tua */
 }
